--- a/css/about-style.css
+++ b/css/about-style.css
@@ -28,16 +28,16 @@ ul {
     list-style: none;
 }
 
-.left-side {
+#left-side {
     display: flex;
 }
 
-.right-side {
+#right-side {
     background-color: lightgrey;
 }
 
 @media screen and (max-width: 768px) {
-    .left-side {    
+    #left-side {    
         flex-wrap: wrap;
  
 
@@ -66,20 +66,20 @@ ul {
         height: 100vh;
     }
 
-    .grid-container {
+    #grid-container {
         display: grid;
         grid-template-columns: 5fr, 1fr, 6fr, 1fr;
         grid-template-rows: repeat(12, 1fr);
     }
 
-    .left-side {
+    #left-side {
         flex-direction: column;
         grid-column: 1 / 2;
         grid-row: 1 / 13;
         background-color: dimgrey;
     }
 
-    .right-side {
+    #right-side {
         grid-column: 3 / 4;
         grid-row: 2 / 6;
     }
@@ -94,20 +94,20 @@ ul {
 
 /* Desktop - 5 grid columns */
 @media screen and (min-width: 1024px) {
-    .grid-container {
+    #grid-container {
         display: grid;
         grid-template-columns: 2fr, 2fr, 1fr, 4fr, 3fr;
         grid-template-rows: repeat(10, 1fr);
     }
 
-    .left-side {
+    #left-side {
         flex-direction: column;
         grid-column: 2 / 3;
         grid-row: 1 / 7;
         background-color: dimgrey;
     }
 
-    .right-side {
+    #right-side {
         grid-column: 4 / 5;
         grid-row: 5 / 9;
     }
