--- a/css/blog-landing-style.css
+++ b/css/blog-landing-style.css
@@ -1,10 +1,5 @@
-header {
-    justify-content: center;
-}
-
 nav {
-    max-width: 80vw;
-    background-color: blue;
+    width: 100%;
     text-align: center;
 
 }
@@ -12,22 +7,40 @@ nav {
 ul {
     display: flex;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 li {
     font-size: 5vw;
+    margin-left: 2vw;
+    margin-right: 2vw;
 }
 
 img {
-    width: 360px;
-    height: 240px;
+    max-width: 360px;
+    max-height: 240px;
+}
+
+#flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .blog-card {
-    background-color: mediumaquamarine;
     border: solid darkgray;
-    border-radius: 10%;
-    padding: 20px;
-    margin: 10px;
+    flex: 0 1 360px;
+    margin: 5px;
+}
+
+.blog-preview {
+    display: none;
+}
+
+@media screen and (min-width: 768px) {
+
+    .blog-preview {
+        display: inline;
+    }
+
 }
