Added Art Direction to blog image, styled blog post

--- a/css/blog-landing-style.css
+++ b/css/blog-landing-style.css
@@ -1,7 +1,6 @@
 nav {
     width: 100%;
     text-align: center;
-
 }
 
 ul {
@@ -11,7 +10,7 @@ ul {
 }
 
 li {
-    font-size: 5vw;
+    font-size: clamp(18px, 2.5vw, 2rem);
     margin-left: 2vw;
     margin-right: 2vw;
 }
