minor changes, readying for push

--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,10 @@ html, body {
     margin: 0px;
     font-family: 'Roboto';
 }
-
+/* 
 h1 {
     text-align: center;
-}
+} */
 
 a {
     text-decoration: none;
