--- a/css/about-style.css
+++ b/css/about-style.css
@@ -1,20 +1,19 @@
 
+/* Make text look good but also readable using text shadow */
 h1 {
     font-size: 3em;
     color: rgb(240, 240, 240);
     text-shadow: 2px 2px dimgray;
 }
-
+/* Make blockquote standout */
 blockquote {
-
     background: rgb(240, 240, 240);
-  border-left: 10px solid #ccc;
-
-  padding: 0.5em 10px;
-  color: #535b63;
+    border-left: 10px solid #ccc;
+    padding: 0.5em 10px;
+    color: #535b63;
 }
 
-
+/* Make text look good but also readable */
 #bio p{
     color: rgb(240, 240, 240);
     text-shadow: 1px 1px dimgray;
@@ -40,10 +39,26 @@ a:hover {
     color: darkred;
 }
 
+/* Remove indentation and bullets */
 ul {
+    padding: 0;
+    margin-left: 15px;
     list-style: none;
 }
 
+/* Make link to resume big and prominent */
+#resume {
+    font-size: 40px;
+    letter-spacing: 5px;
+    margin-left: 15px;
+}
+
+/* Add some vertical spaceing between list items */
+ul li {
+    line-height: 20px;
+}
+
+/* Flex to allow for responsive behaviour */
 #left-side {
     display: flex;
     background-color: #708090;
@@ -64,7 +79,7 @@ ul {
 }
 
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #left-side {    
         flex-wrap: wrap;
         justify-content: center;
@@ -101,7 +116,7 @@ ul {
 
 
 /* Table - 4 grid columns */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 767px) {
 
     body {
         height: 100vh;
