--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ html, body {
     padding: 0px;
     margin: 0px;
     font-family: 'Roboto';
+    background-color: rgb(240, 240, 240);
 }
 /* 
 h1 {
