More work on about, created tasks.md to track tasks to complete before submission

--- a/css/about-style.css
+++ b/css/about-style.css
@@ -53,6 +53,16 @@ ul {
     background-color: lightgrey;
 }
 
+.content {
+    margin-left: 15px;
+    color: #555555;
+}
+
+.content h2 {
+    font-size: 24px;
+    text-shadow: 0.5px 0.5px #708090;
+}
+
 
 @media screen and (max-width: 768px) {
     #left-side {    
