--- a/css/about-style.css
+++ b/css/about-style.css
@@ -78,7 +78,17 @@ ul li {
     text-shadow: 0.5px 0.5px #708090;
 }
 
+#nav-list {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+}
 
+#nav-list li {
+    margin: 25px;
+}
+
+/* Mobile Only Styling */
 @media screen and (max-width: 767px) {
     #left-side {    
         flex-wrap: wrap;
@@ -103,24 +113,11 @@ ul li {
 
 }
 
-#nav-list {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
-}
-
-#nav-list li {
-    margin: 25px;
-}
 
 
 
-/* Table - 4 grid columns */
+/* Tablet - 4 grid columns */
 @media screen and (min-width: 767px) {
-
-    body {
-        height: 100vh;
-    }
 
     #bio {
         margin-left: 15px;
@@ -130,53 +127,41 @@ ul li {
     #grid-container {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(12, 1fr);
+        grid-template-rows: repeat(6, 1fr), 20px;
     }
 
     #left-side {
         flex-direction: column;
         align-items: center;
         grid-column: 1 / 3;
-        grid-row: 1 / 13;
+        grid-row: 1 / 6;
     }
 
     #right-side {
         grid-column: 3 / 5;
-        grid-row: 2 / 6;
+        grid-row: 1 / 6;
     }
 
     #nav-footer{
-        grid-column: 3 / 4;
-        grid-row: 8 / 9;
+        grid-column: 2 / 4;
+        grid-row: 7 / 8;
     }
 
 
 }
 
 
-/* Desktop - 5 grid columns */
+/* Desktop - 4 grid columns */
 @media screen and (min-width: 1024px) {
-    #grid-container {
-        display: grid;
-        grid-template-rows: repeat(10, 1fr);
-    }
 
     #left-side {
         grid-column: 2 / 3;
-        grid-row: 1 / 7;
-
+        grid-row: 1 / 5;
     }
 
     #right-side {
         grid-column: 3 / 4;
-        grid-row: 5 / 9;
+        grid-row: 3 / 6;
     }
-
-    #nav-footer{
-        grid-column: 2 / 4;
-        grid-row: 10 / 11;
-    }
-
-
 
 }
