--- a/css/blog-landing-style.css
+++ b/css/blog-landing-style.css
@@ -1,18 +1,23 @@
-nav {
-    width: 100%;
-    text-align: center;
+
+/* Add margin to title area */
+#title-box {
+    width: 100vw;
+    background-color: #333333;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
 }
 
-ul {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
+#title-box h1 {
+    margin-left: 15px;
+    color: #F2F2F2;
+    letter-spacing: 1rem;
+    padding-top: 10px;
 }
 
-li {
-    font-size: clamp(18px, 2.5vw, 2rem);
-    margin-left: 2vw;
-    margin-right: 2vw;
+#title-box p {
+    margin-left: 15px;
+    margin-right: 15px;
+    color: #F2F2F2;
 }
 
 img {
@@ -27,9 +32,28 @@ img {
 }
 
 .blog-card {
-    border: solid darkgray;
+    border-radius: 10px;
+    box-shadow: 5px 5px 15px rgba(186, 126, 126, 0.5);
+    padding: 5px;
     flex: 0 1 360px;
     margin: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.blog-card :hover {
+    border-radius: 10px;
+    box-shadow: 10px 10px 25px rgba(186, 126, 126, 0.5);
+    padding: 5px;
+}
+
+
+time {
+    color: #333333;
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
 }
 
 .blog-preview {
