--- a/css/blog-post-style.css
+++ b/css/blog-post-style.css
@@ -1,55 +1,74 @@
-nav {
-    width: 100%;
-    text-align: center;
-}
 
-ul {
+/* Styling for blog navigation links */
+#blog-list ul {
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
 }
 
-#link-nav li {
-    font-size: clamp(1rem, 2.5vw, 2rem);
+/* Styling for blog navigation links */
+#blog-list li {
+    font-size: 18px;
     margin-left: 2vw;
     margin-right: 2vw;
 }
 
-#blog-nav li {
-    font-size: clamp(1rem, 2.5vw, 1.5rem);
-    margin-left: 2vw;
-    margin-right: 2vw;
-}
-
+/* Make title box take up full width and align text to center */
 #title-box {
     width: 100vw;
     background-color: #333333;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
     margin-bottom: 20px;
+    text-align: center;
 }
 
+/* Add letter spacing for heading to stand out more */
 #title-box h2 {
+    margin-left: 15px;
+    margin-right: 15px;
     color: #F2F2F2;
-    letter-spacing: 1rem;
-    padding-top: 10px;
+    letter-spacing: 5px;
+    padding-top: 15px;
 }
 
+/* Contrast text color with bg color for easier reading */
 #title-box p {
+    margin-left: 15px;
+    margin-right: 15px;
     color: #CCCCCC;
 }
 
+/* Make time smaller than other text elements */
 #title-box time{
     color: #F2F2F2;
-    font-size: small;
+    font-size: 14px;
+    padding-left: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
-#parent {
-    display: grid;
-    place-items: center;
+/* Flex column, no wrap so that elements are responsive but do not change position in column */
+#content-container {
+    padding-top: 15px;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items:  center;
+    background-color: #708090;
 }
 
+/* flex: 1 1 200px so that min text width is 200px and element grows and shrinks with the page */
+#article-text {
+    flex: 1 1 200px;
+    max-width: 1024px;
+    margin-left: 15px;
+    margin-right: 25px;
+    padding-right: 5px;
+    color: #F2F2F2;
+}
+
+/* max width 1024px so that it doesn't go beyond text boundary at larger sizes */
 img {
-    max-width: 80%;
-    align-self: center;
+    max-width: 1024px;
+    border-radius: 1%;
+    box-shadow: 5px 5px 5px #333333;
 }
-
