--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ li {
     list-style: none;
 }
 
-.nav-list {
+#nav-list {
     width: 100%;
     text-align: center;
     display: flex;
@@ -30,22 +30,17 @@ li {
     justify-content: center;
 }
 
-.nav-list ul {
+#nav-list ul {
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
 }
 
 
-.nav-list li {
-    margin: 25px;
+#nav-list li {
     font-size: clamp(24px, 2.5vw, 2rem);
     margin-left: 2vw;
     margin-right: 2vw;
 }
 
-.blog-list li {
-    font-size: 18px;
-    margin-left: 2vw;
-    margin-right: 2vw;
-}
+
